--- a/css/styles.css
+++ b/css/styles.css
@@ -896,7 +896,7 @@ input[type="password"], textarea {
     -ms-flex: 0 0 41.66667%;
     -webkit-box-flex: 0;
     flex: 0 0 41.66667%;
-    max-width: 41.66667%;
+    max-width: 100%;
 }
 
 .large-6 {
@@ -1547,7 +1547,7 @@ input[type="password"], textarea {
         -ms-flex: 0 0 100%;
         -webkit-box-flex: 0;
         flex: 0 0 100%;
-        max-width: 100%;
+        max-width: 80%;
     }
 }
 
@@ -3778,7 +3778,7 @@ input[type="button"].btn--primary:focus {
 .s-about {
     --color-border: var(--color-gray-16);
     background-color: var(--color-gray-17);
-    padding-top: calc(6 * var(--space));
+    padding-top: calc(3 * var(--space));
     padding-bottom: var(--vspace-4);
     color: rgba(255, 255, 255, 0.4);
 }
@@ -3813,6 +3813,7 @@ input[type="button"].btn--primary:focus {
     border-color: white;
     color: black;
     margin-right: 0;
+    width: fit-content;
 }
 
 .s-about__content-bottom .btn--download svg {
@@ -3884,7 +3885,7 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-resume {
     background-color: white;
-    padding-top: calc(6 * var(--space));
+    padding-top: calc(3 * var(--space));
     padding-bottom: var(--vspace-4);
 }
 
@@ -3962,7 +3963,7 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-portfolio {
     background-color: var(--color-gray-1);
-    padding-top: calc(6 * var(--space));
+    padding-top: calc(3 * var(--space));
     padding-bottom: var(--vspace-5);
 }
 
@@ -4394,7 +4395,7 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-contact {
     background-color: var(--color-gray-18);
-    padding-top: calc(6 * var(--space));
+    padding-top: calc(2 * var(--space));
     padding-bottom: var(--vspace-3_5);
 }
 
