--- a/css/styles.css
+++ b/css/styles.css
@@ -3449,6 +3449,7 @@ input[type="button"].btn--primary:focus {
     width: 100%;
     height: 100%;
     background-image: url(../images/header-bg-3000.jpg);
+    opacity: 40%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
