resize portfolio items blocks

--- a/css/styles.css
+++ b/css/styles.css
@@ -3980,7 +3980,7 @@ input[type="button"].btn--primary:focus {
  * ## portfolio list
  * ------------------------------------------------------------------- */
 .folio-list {
-    max-width: 1180px;
+    max-width: 80%;
     margin-top: var(--vspace-2_5);
 }
 
