--- a/css/styles.css
+++ b/css/styles.css
@@ -3924,6 +3924,7 @@ input[type="button"].btn--primary:focus {
     font-size: calc(var(--text-size) * 1.1111);
     margin-top: -.4rem;
     margin-bottom: var(--vspace-0_75);
+    font-style: normal;
 }
 
 .resume-block__header-meta span:first-child {
