--- a/css/styles.css
+++ b/css/styles.css
@@ -3968,8 +3968,8 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-portfolio {
     background-color: var(--color-gray-1);
-    padding-top: calc(3 * var(--space));
-    padding-bottom: var(--vspace-5);
+    padding-top: var(--vspace-1_5);
+    padding-bottom: var(--vspace-1_5);
 }
 
 .s-portfolio h3 {
