--- a/css/styles.css
+++ b/css/styles.css
@@ -3968,8 +3968,8 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-portfolio {
     background-color: var(--color-gray-1);
-    padding-top: var(--vspace-1_5);
-    padding-bottom: var(--vspace-1_5);
+    padding-top: var(--vspace-0_5);
+    padding-bottom: var(--vspace-0_5);
 }
 
 .s-portfolio h3 {
@@ -3985,8 +3985,8 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .folio-list {
     max-width: 100%;
-    margin-top: var(--vspace-1);
-    margin-bottom: var(--vspace-1);
+    margin-top: var(--vspace-0_5);
+    margin-bottom: var(--vspace-0_5);
 
 }
 
