--- a/css/styles.css
+++ b/css/styles.css
@@ -2023,7 +2023,7 @@ form,
 img, 
 .video-container, 
 .ss-custom-select {
-    margin-bottom: var(--vspace-1);
+    margin-bottom: var(--vspace-0_25);
 }
 
 
@@ -3891,13 +3891,13 @@ input[type="button"].btn--primary:focus {
 .s-resume {
     background-color: white;
     padding-top: calc(3 * var(--space));
-    padding-bottom: var(--vspace-4);
+    padding-bottom: var(--vspace-1);
 }
 
 .s-resume__section {
     border-bottom: 1px solid var(--color-border);
-    padding-bottom: var(--vspace-0_75);
-    margin-bottom: var(--vspace-2_5);
+    padding-top: var(--vspace-1_25);
+    padding-bottom: var(--vspace-0_5);
 }
 
 .s-resume__section:last-child {
@@ -3968,8 +3968,8 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-portfolio {
     background-color: var(--color-gray-1);
-    padding-top: var(--vspace-0_5);
-    padding-bottom: var(--vspace-0_5);
+    padding-top: var(--vspace-2);
+    padding-bottom: var(--vspace-1);
 }
 
 .s-portfolio h3 {
