--- a/css/styles.css
+++ b/css/styles.css
@@ -3890,7 +3890,7 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-resume {
     background-color: white;
-    padding-top: calc(3 * var(--space));
+    padding-top: calc(2 * var(--space));
     padding-bottom: var(--vspace-1);
 }
 
@@ -3968,7 +3968,7 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-portfolio {
     background-color: var(--color-gray-1);
-    padding-top: var(--vspace-2);
+    padding-top: var(--vspace-2_5);
     padding-bottom: var(--vspace-1);
 }
 
