--- a/css/styles.css
+++ b/css/styles.css
@@ -1646,7 +1646,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1, .h1 {
-    margin-top: var(--vspace-3);
+    margin-top: var(--vspace-1);
     margin-bottom: var(--vspace-0_75);
 }
 
@@ -4403,7 +4403,7 @@ input[type="button"].btn--primary:focus {
 .s-contact {
     background-color: var(--color-gray-18);
     padding-top: calc(2 * var(--space));
-    padding-bottom: var(--vspace-3_5);
+    padding-bottom: var(--vspace-5);
 }
 
 .s-contact .section-header-allcaps {
@@ -4434,6 +4434,7 @@ input[type="button"].btn--primary:focus {
     font-size: 2.8rem;
     font-weight: 400;
     line-height: 1.286;
+    margin-bottom: var(--vspace-0_75);
 }
 
 .contact-block a {
